# resend-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: ci.yml  lint.yml  publish.yml
examples/: axum-verify-event-middleware.rs  custom-config.rs
examples/cf-worker/: Cargo.toml  README.md  wrangler.toml
examples/cf-worker/src/: lib.rs
src/: api_keys.rs  audiences.rs  automations.rs  batch.rs  broadcasts.rs  client.rs  config.rs  contacts.rs  domains.rs  emails.rs  error.rs  events.rs  idempotent.rs  lib.rs  list_opts.rs  logs.rs  mail.rs  oauth.rs  rate_limit.rs  receiving.rs  resend_client.rs  retry.rs  segments.rs  suppressions.rs  templates.rs  topics.rs  webhooks.rs
src/services/: api_keys.rs  audiences.rs  contacts.rs  domains.rs  emails.rs  mod.rs
src/types/: api_keys.rs  audiences.rs  contacts.rs  domains.rs  emails.rs  error.rs  mod.rs
