# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "resend-rs"
version = "0.11.2"
edition = "2021"

license = "MIT"
readme = "./README.md"

authors = ["Antonios Barotsis <antonios.barotsis@proton.me>"]
repository = "https://github.com/resend/resend-rust"
homepage = "https://resend.com/docs/send-with-rust"
documentation = "https://docs.rs/resend-rs"

categories = ["email", "web-programming"]
keywords = ["email", "resend"]
description = "A minimal Resend client."

[features]
default = ["native-tls"]

blocking = ["reqwest/blocking", "maybe-async/is_sync"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
ecow = { version = "0.2.2", features = ["serde"] }
thiserror = { version = "2.0.11" }
maybe-async = { version = "0.2.10" }
governor = "0.8.1"
rand = "0.9.0"
serde_json = "1.0.139"

[dev-dependencies]
jiff = { version = "0.1.4", features = ["serde"] }
tokio = { version = "1.43.0", features = ["macros", "test-util", "rt-multi-thread"] }
# Used in examples
axum = "0.8.1"
svix = "1.59.2"
http-body-util = "0.1.2"
tokio-shared-rt = "0.1.0"
