# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "resend-rs"
version = "0.13.0"
edition = "2024"

license = "MIT"
readme = "./README.md"

authors = ["Antonios Barotsis <antonios.barotsis@proton.me>"]
repository = "https://github.com/resend/resend-rust"
homepage = "https://resend.com/docs/send-with-rust"
documentation = "https://docs.rs/resend-rs"

categories = ["email", "web-programming"]
keywords = ["email", "resend"]
description = "A minimal Resend client."

[features]
default = ["native-tls"]

blocking = ["reqwest/blocking", "maybe-async/is_sync"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.12.15", default-features = false, features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
ecow = { version = "0.2.4", features = ["serde"] }
thiserror = { version = "2.0.12" }
maybe-async = { version = "0.2.10" }
governor = "0.10.0"
rand = "0.9.1"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
serde_json = "1.0.140"

[dev-dependencies]
jiff = { version = "0.2.9", features = ["serde"] }
tokio = { version = "1.44.2", features = ["macros", "test-util", "rt-multi-thread"] }
# Used in examples
axum = "0.8.3"
svix = "1.64.1"
http-body-util = "0.1.3"
tokio-shared-rt = "0.1.0"
