# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "resend-rs"
version = "0.19.0-beta.7"
edition = "2024"

license = "MIT"
readme = "./README.md"

authors = ["Antonios Barotsis <antonios.barotsis@proton.me>"]
repository = "https://github.com/resend/resend-rust"
homepage = "https://resend.com/docs/send-with-rust"
documentation = "https://docs.rs/resend-rs"

categories = ["email", "web-programming"]
keywords = ["email", "resend"]
description = "Resend's Official Rust SDK."

[features]
default = ["native-tls"]

blocking = ["reqwest/blocking", "maybe-async/is_sync"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
ecow = { version = "0.2.4", features = ["serde"] }
thiserror = { version = "2.0" }
maybe-async = { version = "0.2.10" }
governor = "0.10.0"
rand = "0.9.2"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
serde_json = "1.0.145"

[dev-dependencies]
jiff = { version = "0.2.13", features = ["serde"] }
tokio = { version = "1.45.0", features = [
  "macros",
  "test-util",
  "rt-multi-thread",
] }
strum = { version = "0.27", features = ["derive"] }
scraper = "0.24.0"
regex = "1.12.2"
# Used in examples
axum = "0.8.6"
svix = "1.77.0"
http-body-util = "0.1.3"
tokio-shared-rt = "0.1.0"
anyhow = "1.0"
