[package]
name = "cf-worker-test"
version = "0.1.0"
edition = "2021"
authors = ["Antonios Barotsis <antonios.barotsis@proton.me>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=['http', 'axum'] }
worker-macros = { version="0.5.0", features=['http'] }
axum  = { version = "0.8", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
governor = "0.8.1"
rand = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
resend-rs = "0.12.0"
